fix align boxes

--- a/gooey/main.css
+++ b/gooey/main.css
@@ -4,12 +4,14 @@
 	padding-left: 10px;
 	color: #000000;
 	text-transform: uppercase;
-	font-size: 10px;
+	font-size: 20px;
+	text-align: center;
 }
 
 .jumbotron {
+	font-family: "Pacifico", sans-serif;
 	background-color: #ff7575;
-	height: 250px;
+	height: 300px;
 	font-weight: bold;
 	font-size: 48px;
 	color: #ffffff;
@@ -24,6 +26,7 @@
 }
 
 .learn-more {
+	font-family: "Pacifico", sans-serif;
 	background-color: #fffff5;
 	color: #000000;
 	font-size: 18px;
@@ -48,4 +51,22 @@
 	border: 3px solid #000000;
 }
 
+ .desc-block-left1 {
+    display:inline-block;
+    border-style:solid;
+    background-color:#ff7575;
+    width:40%;
+    height:110px;
+    margin:30px 10px 10px 5%;
+    border-radius:10px;
+}
+ .desc-block-right1 {
+    display:inline-block;
+    border-style:solid;
+    background-color:#ff7575;
+    width:40%;
+    height:110px;
+    margin:30px 10px 10px 5%;
+    border-radius:10px;
+}
 
